--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -4,9 +4,9 @@ ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
 DATABASE_URL=postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=false
 ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 NETWORK=
-SUBNETWORK=Awesome chain
-LOGO=/images/blockscout_logo.svg
-LOGO_FOOTER=/images/blockscout_logo.svg
+SUBNETWORK=Baby doge chain
+LOGO=/images/bdcs.png
+LOGO_FOOTER=/images/bdcs.png
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
 ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
