--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -1,6 +1,6 @@
 # DOCKER_TAG=
 ETHEREUM_JSONRPC_VARIANT=geth
-ETHEREUM_JSONRPC_HTTP_URL=http://host.docker.internal:8545/
+ETHEREUM_JSONRPC_HTTP_URL=http://10.130.0.2:10002/
 DATABASE_URL=postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=false
 ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 NETWORK=
@@ -18,7 +18,7 @@ BLOCKSCOUT_HOST=
 BLOCKSCOUT_PROTOCOL=
 # SECRET_KEY_BASE=
 # CHECK_ORIGIN=
-PORT=4000
+PORT=80
 COIN_NAME=
 # METADATA_CONTRACT=
 # VALIDATORS_CONTRACT=
