--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -15,11 +15,11 @@ services:
     restart: always
     container_name: 'postgres'
     environment:
-        POSTGRES_PASSWORD: ''
-        POSTGRES_USER: 'postgres'
-        POSTGRES_HOST_AUTH_METHOD: 'trust'
+      POSTGRES_PASSWORD: ''
+      POSTGRES_USER: 'postgres'
+      POSTGRES_HOST_AUTH_METHOD: 'trust'
     ports:
-      - 7432:5432
+      - 4000:4000
 
   blockscout:
     depends_on:
@@ -31,17 +31,17 @@ services:
       context: ..
       dockerfile: ./docker/Dockerfile
       args:
-        CACHE_EXCHANGE_RATES_PERIOD: ""
-        DISABLE_READ_API: "false"
-        API_PATH: "/"
-        NETWORK_PATH: "/"
-        DISABLE_WEBAPP: "false"
-        DISABLE_WRITE_API: "false"
-        CACHE_ENABLE_TOTAL_GAS_USAGE_COUNTER: ""
-        CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: ""
-        SOCKET_ROOT: "/"
-        WOBSERVER_ENABLED: "false"
-        ADMIN_PANEL_ENABLED: ""
+        CACHE_EXCHANGE_RATES_PERIOD: ''
+        DISABLE_READ_API: 'false'
+        API_PATH: '/'
+        NETWORK_PATH: '/'
+        DISABLE_WEBAPP: 'false'
+        DISABLE_WRITE_API: 'false'
+        CACHE_ENABLE_TOTAL_GAS_USAGE_COUNTER: ''
+        CACHE_ADDRESS_WITH_BALANCES_UPDATE_INTERVAL: ''
+        SOCKET_ROOT: '/'
+        WOBSERVER_ENABLED: 'false'
+        ADMIN_PANEL_ENABLED: ''
     restart: always
     container_name: 'blockscout'
     links:
@@ -50,7 +50,7 @@ services:
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     env_file:
-      -  ./envs/common-blockscout.env
+      - ./envs/common-blockscout.env
     ports:
       - 4000:4000
 
@@ -59,6 +59,6 @@ services:
     restart: always
     container_name: 'smart-contract-verifier'
     env_file:
-      -  ./envs/common-smart-contract-verifier.env
+      - ./envs/common-smart-contract-verifier.env
     ports:
       - 8043:8043
