--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -5,8 +5,8 @@ DATABASE_URL=postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=fal
 ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 NETWORK=
 SUBNETWORK=Baby doge chain
-LOGO=/images/bdcs.png
-LOGO_FOOTER=/images/bdcs.png
+LOGO=/images/bdcs.svg
+LOGO_FOOTER=/images/bdcs.svg
 # ETHEREUM_JSONRPC_WS_URL=
 ETHEREUM_JSONRPC_TRANSPORT=http
 ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES=false
