--- a/docker-compose/envs/common-blockscout.env
+++ b/docker-compose/envs/common-blockscout.env
@@ -4,7 +4,7 @@ ETHEREUM_JSONRPC_HTTP_URL=http://10.130.0.2:10002/
 DATABASE_URL=postgresql://postgres:@host.docker.internal:7432/blockscout?ssl=false
 ETHEREUM_JSONRPC_TRACE_URL=http://host.docker.internal:8545/
 NETWORK=
-SUBNETWORK=Baby doge chain
+SUBNETWORK=Baby Doge Chain
 LOGO=/images/bdcs.png
 LOGO_FOOTER=/images/bdcs.png
 # ETHEREUM_JSONRPC_WS_URL=
